--- a/chats/bot.css
+++ b/chats/bot.css
@@ -7,7 +7,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: auto;
+    background: none;
 }
 
 /* Contenedor del chatbot */
@@ -36,7 +37,7 @@ body {
     padding: 8px 12px;
     margin: 8px 0;
     border-radius: 20px;
-    max-width: 80%;
+    width: 80%;
     clear: both;
 }
 
