--- a/chats/bot.css
+++ b/chats/bot.css
@@ -1,11 +1,11 @@
 html {
     margir:0;
     padding:0;
-    background-color: #d9f2f8ff;
+    background-color: transparent;
 }
 body {
     font-family: Arial, sans-serif;
-    background-color: #d9f2f8ff;
+    background-color: transparent;
     margin: 0;
     padding: 0;
     display: flex;
